src/test/c/accept/13-addition.arcx
class Mordor
{
		 mountDoom : Function<void> = ()
		 {
				 sam : int = 1;
				 frodo : int = 4;
				 gollum : int = 4;
		 
				 print(sam + frodo); #Suma, Imprime 5.
		 }
}