src/test/c/reject/37-nested-lambda-missing-parenthesis.arcx
f = (a: int, b: int => (x: int) {
    return x;
}; 